--- a/package.json
+++ b/package.json
@@ -28,15 +28,21 @@
     "karma-webpack": "^1.7.0"
   },
   "dependencies": {
+    "aws-sign2": "^0.6.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "express": "^4.13.4",
+    "har-validator": "^2.1.3",
+    "json-loader": "^0.5.4",
+    "net": "^1.0.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "request": "^2.72.0",
     "requirejs": "^2.2.0",
+    "tough-cookie": "^2.2.2",
     "webpack": "^1.13.1"
   }
 }
