--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/fkotsian/gitpop",
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "jasmine": "^2.4.1",
     "jasmine-ajax": "^3.2.0",
     "karma": "^0.13.22",
@@ -28,11 +30,13 @@
     "karma-webpack": "^1.7.0"
   },
   "dependencies": {
+    "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
+    "babel-runtime": "^6.9.2",
     "express": "^4.13.4",
     "json-loader": "^0.5.4",
     "react": "^15.1.0",
