--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-ajax": "^0.1.13",
-    "karma-webpack": "^1.7.0"
+    "karma-webpack": "^1.7.0",
+    "mock-promises": "^0.6.0",
+    "pivotal-js-jasmine-matchers": "0.0.18"
   },
   "dependencies": {
     "babel-core": "^6.9.1",
@@ -37,7 +39,9 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.9.2",
+    "es6-promise": "^3.2.1",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
